<resources>
    <string name="app_name">玩安卓</string>
    <string name="my">我的</string>
    <string name="index">首页</string>
    <string name="knowledge_system">知识体系</string>
    <string name="author">作者：</string>
    <string name="category">分类：</string>
    <string name="date">时间：</string>
    <string name="register">注册</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="about">关于</string>
    <string name="about_content">1.感谢鸿洋大神贡献的API\nhttp://www.wanandroid.com/blog/show/2\n2.本应用仅供学习使用</string>
    <string name="remove">移除</string>
</resources>
