<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp05"
    android:paddingTop="@dimen/dp05"
    android:paddingBottom="@dimen/dp05"
    android:background="@drawable/white_press_selector">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/dp05">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:text="@string/app_name"/>
        <TextView
            android:id="@+id/tvIdentify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/shape_identify_red"
            android:textSize="12sp"
            android:textColor="#e91111"
            android:text="@string/app_name"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/dp05"
            android:layout_marginTop="@dimen/dp04">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    android:text="@string/category"/>
                <TextView
                    android:id="@+id/tvChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#454545"
                    android:textSize="12sp"
                    android:text="@string/app_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp02"
                android:layout_marginBottom="@dimen/dp02">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    android:text="@string/author"/>
                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#454545"
                    android:textSize="12sp"
                    android:text="@string/app_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    android:text="@string/date"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    android:text="@string/app_name"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/ivCollect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:padding="@dimen/dp05"
            android:src="@mipmap/collect"/>
    </FrameLayout>



</LinearLayout>